fix whitespace visibility in codemirror: https://bugzilla.redhat.com/show_bug.cgi?id=1154881

--- a/php/6/assets/sass/application.scss
+++ b/php/6/assets/sass/application.scss
@@ -926,4 +926,8 @@ a.downloadLink
   display: table !important;
 }
 
+.CodeMirror .cm-space {
+  padding:0 0.2em;
+}
+
 @import "standard";
